[AD-1062, AD-1063] Added aboriginal flag icon to styles, fixed book list overlap

--- a/src/applications/libguides/custom-styles.scss
+++ b/src/applications/libguides/custom-styles.scss
@@ -704,6 +704,7 @@ body:not(.editmode) {
             padding-left: $spacing-m;
             li {
                 margin-bottom: $spacing-xs;
+                overflow: hidden;
             }
 
             li:last-child {
